--- a/styles/base.css
+++ b/styles/base.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Stoke:wght@300;400&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Host+Grotesk:ital,wght@0,300..800;1,300..800&family=Stoke:wght@300;400&display=swap');
 *{
     margin: 0;
     padding: 0;
