--- a/styles/temples.css
+++ b/styles/temples.css
@@ -14,6 +14,9 @@ img {
     height: auto; 
     margin: .5rem;
 }
+main h2{
+    font-size:2.3rem;
+}
 
 
 /*mobile *********************************/
