--- a/styles/form.css
+++ b/styles/form.css
@@ -1,9 +1,3 @@
-/* Prevent adjustments of font size after orientation changes in IE on Windows Phone and in iOS.  */
-html {-webkit-text-size-adjust: 100%; -ms-text-size-adjust: 100%;}
-
-/*----------- apply a natural box layout model to all elements --------------*/
-* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;}
-
 body {
     font-family: "Poppins", sans-serif;
     background-color: #F3F0EB;
@@ -27,6 +21,7 @@ main {
     padding: 0 2%;
     min-height: 20rem;
     margin: 0 auto;
+    max-width: 35%;
 }
 
 /*--------FORM STYLING------------*/
@@ -72,7 +67,7 @@ h2{
     padding: .75rem;
     color: #555;
     width: 100%;
-    max-width: 550px;
+    max-width: 450px;
     appearance: none;
 }
 
@@ -130,12 +125,7 @@ h2{
     content:'\2605';
   }
   
-  @-moz-document url-prefix() {
-    .star-rating input:checked ~ label:before {
-    font-size: 36px;
-    line-height: 21px;
-    }
-  }  
+ 
   
 textarea {
     height: 200px;         
@@ -163,8 +153,9 @@ textarea {
     border-radius: 6px;
     padding: .8rem;
     width: 90%;
-    max-width: 400px;
+    max-width: 300px;
     margin: 1rem 2% 2rem 2%;
+    margin-left:8rem;
     box-shadow: 1px 1px 4px #999;
 }
 footer
