--- a/project/styles/contact-us.css
+++ b/project/styles/contact-us.css
@@ -270,7 +270,12 @@ textarea {
         justify-content: flex-end;
         flex-direction: row !important;
         align-items: center;
-        margin-left: auto;
+    }
+    .navigation ul{
+        display: flex !important;
+        justify-content: flex-end;
+        flex-direction: row !important;
+        align-items: center;
     }
     nav a{
         flex: 1 1 100%;
