--- a/project/styles/index.css
+++ b/project/styles/index.css
@@ -84,6 +84,8 @@ nav.open {
 	list-style: none;
     padding: 0;
     margin: 0;
+    display: flex;
+	  flex-direction: column;
 }
 
 .navigation ul{
@@ -202,13 +204,13 @@ footer
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   }
 
-.find-text h3, .curiosities h3{
+.find-text h3, .curiosities h3, .visitor h3{
     font-family:"Fraunces", serif;
     font-size: 1.7rem;
     color: var(--prussian-blue);
     padding: .2rem;
 }
-.find-text p, .curiosities p{
+.find-text p, .curiosities p, .visitor p{
     font-size: .9rem;
     padding: 1rem;
     color: var(--charcoal);
@@ -330,8 +332,9 @@ footer
 
   /*--Curiosity section configuration--*/
 
-  .curiosities {
+  .curiosities, .visitor{
     margin: 5px auto;
+    margin-top:20px;
     padding: 20px;
     background-color: white;
     border-radius: 8px;
@@ -361,3 +364,4 @@ footer
 } 
 
   /*--Curiosity section end--*/
+
